--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,13 @@
               class="h-14 w-auto md:h-16"
             />
             <h1
-              class="text-shadow-hero-md text-sm font-semibold tracking-wider sm:text-lg lg:text-xl"
+              class="text-shadow-hero-md text-sm font-semibold tracking-wider text-primary-0 sm:text-lg lg:text-xl"
             >
-              Bytes<span class="text-primary-75">fest</span> 2022
+              Bytes<span class="text-primary-75">fest</span>
+              <span
+                class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text text-transparent"
+                >2022</span
+              >
             </h1>
           </div>
           <div class="flex h-full items-center lg:basis-5/12">
@@ -87,12 +91,21 @@
             <h3
               class="text-shadow-hero-lg text-2xl font-semibold sm:text-3xl md:mb-1 md:text-4xl lg:mb-2 lg:text-5xl"
             >
-              BUNCH OF YOUTH TECHNOTRACTION
+              BUNCH OF YOUTH
+              <span
+                class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text font-bold text-transparent"
+                >TECHNOTRACTION</span
+              >
             </h3>
             <h3
               class="text-shadow-hero-lg mb-3 text-2xl font-semibold sm:text-3xl md:mb-6 md:text-4xl lg:text-5xl"
             >
-              AND SPORT FESTIVAL
+              AND
+              <span
+                class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text font-bold text-transparent"
+                >SPORT</span
+              >
+              FESTIVAL
             </h3>
             <p
               class="text-shadow-hero-lg mb-5 text-base text-primary-25 sm:text-lg md:mb-9 md:text-lg lg:text-xl"
@@ -181,9 +194,12 @@
             <!-- text-container -->
             <div class="sm:px-10 md:px-16">
               <h3
-                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
+                class="mb-1 text-center text-xl font-semibold tracking-wide text-primary-0 sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
               >
-                Bytes<span class="text-primary-75">fest</span>
+                Bytes<span
+                  class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text text-transparent"
+                  >fest</span
+                >
               </h3>
               <h5
                 class="mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
@@ -220,7 +236,7 @@
     <!-- ABOUT SECTION END -->
 
     <!-- DANGLE SECTION START -->
-    <div id="about" class="relative bg-primary-700 py-32">
+    <div id="about" class="relative bg-primary-800 py-32">
       <!-- container -->
       <div class="mx-auto px-5 lg:w-[1200px] lg:px-0">
         <div class="flex w-full flex-col lg:flex-row-reverse">
@@ -241,21 +257,25 @@
             <!-- text-container -->
             <div class="sm:px-10 md:px-16">
               <h3
-                class="mb-1 text-center text-xl font-semibold tracking-wide sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
+                class="text-shadow-hero-lg mb-1 text-center text-xl font-semibold tracking-wide sm:text-left sm:text-2xl md:text-3xl lg:text-4xl"
               >
-                Dangle
+                <span
+                  class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text font-bold text-transparent"
+                  >Dangle</span
+                >
               </h3>
               <h5
-                class="mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
+                class="text-shadow-hero-md mb-3 text-center text-xs tracking-normal text-neutral-100 sm:text-left sm:text-sm md:mb-4 md:text-base"
               >
                 Filosofi mascot
               </h5>
+              <!-- underline-decoration -->
               <div class="mb-5 flex w-full justify-center sm:justify-start">
                 <div class="h-[3px] w-16 bg-primary-100"></div>
               </div>
               <div class="">
                 <p
-                  class="mb-5 text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                  class="text-shadow-hero-sm mb-5 text-sm leading-relaxed text-neutral-50 md:leading-loose"
                 >
                   Mahkota Dangle melambangkan kejayaan dan kemakmuran dari acara
                   Bytesfest yang rutin diadakan setiap tahunnya, kacamatanya
@@ -264,7 +284,7 @@
                   keahlian yang ditempatkan dengan tepat.
                 </p>
                 <p
-                  class="text-sm leading-relaxed text-neutral-50 md:leading-loose"
+                  class="text-shadow-hero-sm text-sm leading-relaxed text-neutral-50 md:leading-loose"
                 >
                   Baju saman Dangle memberi makna seni yang melekat dan
                   melestarikan jiwa seni. Truntum mampu untuk tumbuh dan
@@ -286,11 +306,22 @@
     <!-- DANGLE SECTION END -->
 
     <!-- Slider main container -->
-    <div class="bg-[#1b1b1b]">
+    <div class="bg-neutral-900">
       <div class="py-36 text-center">
-        <h1 href="" class="text-shadow-hero-sm text-5xl font-semibold">
-          Bytesfest Competition 2022
+        <h1
+          href=""
+          class="mb-3 text-center text-xl font-semibold tracking-wide text-primary-0 sm:text-2xl md:mb-4 md:text-3xl lg:text-4xl"
+        >
+          Bytes<span class="text-primary-75">fest</span> Competition
+          <span
+            class="bg-gradient-to-r from-primary-100 to-cyan-300 bg-clip-text text-transparent"
+            >2022</span
+          >
         </h1>
+        <!-- underline-decoration -->
+        <div class="mb-5 flex w-full justify-center">
+          <div class="h-[3px] w-28 bg-primary-100"></div>
+        </div>
       </div>
       <div class="swiper">
         <div class="swiper-wrapper pb-12">
