--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,19 @@
         --swiper-pagination-bullet-inactive-opacity: 0.9;
         --swiper-pagination-color: #4d00a9;
       }
+	  #btn-back-to-top {
+		position: fixed;
+		display: none !important;
+	  }
     </style>
+	<title>Bytesfest 2022 - Bunch of Youth Technottraction and Sport Festival</title>
+	<link rel="icon" type="image/x-icon" href="/assets/img/logo-mini.png">
   </head>
-  <body class="bg-neutral-900 font-poppins text-white transition-all">
+  <body class="bg-neutral-900 font-poppins text-white transition-all z-40">
+	<button type="button" data-mdb-ripple="true" data-mdb-ripple-color="light" class="z-30 animate-bounce inline-block p-4 bg-primary-400 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-primary-500 hover:shadow-lg focus:bg-primary-600 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-primary-800 active:shadow-lg transition duration-300 ease-in-out bottom-8 right-8" id="btn-back-to-top">
+		<svg aria-hidden="true" focusable="false" data-prefix="fas" class="w-4 h-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"></path></svg>
+	</button>
+  
     <!-- HERO SECTION START -->
 
     <!-- navigation-start -->
