add carousel responsive for small device

--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,7 @@
 
     <!-- Slider main container -->
     <div class="bg-neutral-900">
-      <div class="py-36 text-center">
+      <div class="pt-36 text-center">
         <h1
           href=""
           class="mb-3 text-center text-xl font-semibold tracking-wide text-primary-0 sm:text-2xl md:mb-4 md:text-3xl lg:text-4xl"
@@ -323,137 +323,54 @@
           <div class="h-[3px] w-28 bg-primary-100"></div>
         </div>
       </div>
+      <!-- swipper-js -->
       <div class="swiper">
         <div class="swiper-wrapper pb-12">
-          <div class="swiper-slide w-5/6 overflow-hidden md:w-2/3">
-            <div class="absolute top-[20%] left-24 p-3.5">
-              <h1 class="mb-6 text-5xl font-medium">Podcast</h1>
-              <p class="mb-8 text-justify text-base font-normal md:max-w-2xl">
-                Dengan Tema “How to improve yourself, with your creativity and
-                what you have” Merupakan Kompetisi yang membutuhkan pemikiran
-                yang mendalam dan kritis, kompetisi Podcast bisa diikuti oleh
-                SMA sederajat dan mahasiswa aktif dari seluruh perguruan tinggi,
-                podcast berdurasi minimal 5 menit dan maksimal 10 menit dengan
-                maksimal 3 orang per kelompok.
-              </p>
-              <div class="flex gap-8">
+          <!-- slide-1 -->
+          <div
+            class="swiper-slide flex h-auto w-11/12 justify-center rounded-sm sm:w-8/12"
+          >
+            <div class="h-full w-full bg-neutral-800">
+              <!-- img -->
+              <div
+                class="relative flex h-36 w-full items-center justify-center sm:h-52"
+              >
+                <img
+                  src="/assets//img/lomba-podcast.png"
+                  alt=""
+                  class="h-full w-full object-cover"
+                />
+                <p class="absolute top-1/2 text-2xl font-medium tracking-wide">
+                  Podcast
+                </p>
+              </div>
+              <!-- text-content -->
+              <div class="mt-4 mb-8 px-5">
+                <p class="text-xs leading-relaxed text-neutral-50">
+                  Dengan Tema “How to improve yourself, with your creativity and
+                  what you have” Merupakan Kompetisi yang membutuhkan pemikiran
+                  yang mendalam dan kritis, kompetisi Podcast bisa diikuti oleh
+                  SMA sederajat dan mahasiswa aktif dari seluruh perguruan
+                  tinggi, podcast berdurasi minimal 5 menit dan maksimal 10
+                  menit dengan maksimal 3 orang per kelompok.
+                </p>
+              </div>
+              <!-- action-button -->
+              <div
+                class="flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
+              >
                 <a
                   href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Guidebook</a
+                  class="rounded-sm bg-neutral-0 px-8 py-2 font-medium text-primary-900"
+                  >Daftar</a
                 >
                 <a
                   href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Pendaftaran</a
+                  class="decoration-primary-200 decoration-2 underline-offset-2 hover:underline"
+                  >Guidebook ></a
                 >
               </div>
             </div>
-            <img class="w-full" src="/assets/img/lomba-podcast.png" />
-          </div>
-          <div class="swiper-slide w-5/6 overflow-hidden md:w-2/3">
-            <div class="absolute top-[20%] left-24 p-3.5">
-              <h1 class="mb-6 text-5xl font-medium">Desain Web</h1>
-              <p class="mb-8 text-justify text-base font-normal md:max-w-2xl">
-                Merupakan Kompetisi perancangan tampilan sebuah web statis atau
-                web yang informasi di dalamnya tidak dapat diubah kecuali jika
-                diubah syntax-nya. Tema web yang diusung yaitu “fashion web”
-                lomba ini diikuti oleh SMA sederajat dan mahasiswa yang
-                berstatus aktif dari seluruh perguruan tinggi di Indonesia
-                dengan jumlah maksimal 3 orang per kelompok.
-              </p>
-              <div class="flex gap-8">
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Guidebook</a
-                >
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Pendaftaran</a
-                >
-              </div>
-            </div>
-            <img class="w-full" src="/assets/img/lomba-web.png" />
-          </div>
-          <div class="swiper-slide w-5/6 overflow-hidden md:w-2/3">
-            <div class="absolute top-[20%] left-24 p-3.5">
-              <h1 class="mb-6 text-5xl font-medium">Fotografi</h1>
-              <p class="mb-8 text-justify text-base font-normal md:max-w-2xl">
-                Merupakan kompetisi dalam menyajikan sebuah karya visual
-                berbentuk foto yang bermakna khusus dan informatif. Kompetisi
-                Fotografi bisa diikuti oleh SMA sederajat dan mahasiswa aktif
-                dari seluruh perguruan tinggi ,yang bertemakan “Yang Muda Yang
-                Berkarya” yang bertujuan agar para generasi muda yang akan
-                menjadi penerus bangsa terekspos dan dapat tercurahkan dalam
-                karya fotografi.
-              </p>
-              <div class="flex gap-8">
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Guidebook</a
-                >
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Pendaftaran</a
-                >
-              </div>
-            </div>
-            <img class="w-full" src="/assets/img/lomba-fotografi.png" />
-          </div>
-          <div class="swiper-slide w-5/6 overflow-hidden md:w-2/3">
-            <div class="absolute top-[20%] left-24 p-3.5">
-              <h1 class="mb-6 text-5xl font-medium">Essai</h1>
-              <p class="mb-8 text-justify text-base font-normal md:max-w-2xl">
-                Merupakan kompetisi di bidang kepenulisan yang dapat diikuti
-                oleh SMA sederajat dan mahasiswa yang berstatus aktif dari
-                seluruh perguruan tinggi di Indonesia. Tema yang diangkat adalah
-                “Peran Generasi Muda dalam Pengembangan Teknologi Masa Depan
-                Indonesia”. Lomba ini bertujuan sebagai wadah untuk
-                mengembangkan kreativitas dan kemampuan berpikir kritis.
-              </p>
-              <div class="flex gap-8">
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Guidebook</a
-                >
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Pendaftaran</a
-                >
-              </div>
-            </div>
-            <img class="w-full" src="/assets/img/lomba-essai.png" />
-          </div>
-          <div class="swiper-slide w-5/6 overflow-hidden md:w-2/3">
-            <div class="absolute top-[20%] left-24 p-3.5">
-              <h1 class="mb-6 text-5xl font-medium">Poster</h1>
-              <p class="mb-8 text-justify text-base font-normal md:max-w-2xl">
-                merupakan kompetisi yang menyediakan karya visual yang
-                berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
-                terkait dan sesuai untuk ditampilkan di tempat umum. Kompetisi
-                Poster bisa diikuti oleh SMA sederajat dan mahasiswa aktif dari
-                seluruh perguruan tinggi.
-              </p>
-              <div class="flex gap-8">
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Guidebook</a
-                >
-                <a
-                  href=""
-                  class="rounded-xl bg-primary-400 py-4 px-8 font-semibold shadow-xl"
-                  >Pendaftaran</a
-                >
-              </div>
-            </div>
-            <img class="w-full" src="/assets/img/lomba-poster.png" />
           </div>
         </div>
         <div class="swiper-pagination"></div>
