progress humberger menu

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       :root {
         --swiper-pagination-bullet-inactive-color: #d9d9d9;
         --swiper-pagination-bullet-inactive-opacity: 0.9;
-        --swiper-pagination-color: #4d00a9;
+        --swiper-pagination-color: #6f32b9;
       }
       #btn-back-to-top {
         position: fixed;
@@ -34,30 +34,9 @@
     </title>
     <link rel="icon" type="image/x-icon" href="/assets/img/logo-mini.png" />
   </head>
-  <body class="z-40 bg-neutral-900 font-poppins text-white transition-all">
-    <button
-      type="button"
-      data-mdb-ripple="true"
-      data-mdb-ripple-color="light"
-      class="bottom-8 right-8 z-30 inline-block animate-bounce rounded-full bg-primary-400 p-4 text-xs font-medium uppercase leading-tight text-white shadow-md transition duration-300 ease-in-out hover:bg-primary-500 hover:shadow-lg focus:bg-primary-600 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-primary-800 active:shadow-lg"
-      id="btn-back-to-top"
-    >
-      <svg
-        aria-hidden="true"
-        focusable="false"
-        data-prefix="fas"
-        class="h-4 w-4"
-        role="img"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 448 512"
-      >
-        <path
-          fill="currentColor"
-          d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
-        ></path>
-      </svg>
-    </button>
-
+  <body
+    class="z-40 overflow-x-hidden bg-neutral-900 font-poppins text-white transition-all"
+  >
     <!-- HERO SECTION START -->
 
     <!-- navigation-start -->
@@ -83,10 +62,13 @@
               >
             </h1>
           </div>
-          <div class="flex h-full items-center lg:basis-5/12">
+          <div
+            class="flex h-full items-center lg:static lg:w-auto lg:basis-5/12"
+          >
             <!-- hamburger-menu -->
-            <button class="p-2 lg:hidden">
+            <button id="hamburger" class="relative z-40 p-2 lg:hidden">
               <div
+                id="hamburger-menu"
                 class="m-auto flex h-6 w-6 flex-col justify-around md:h-7 md:w-7"
               >
                 <span
@@ -100,21 +82,51 @@
                 ></span>
               </div>
             </button>
-            <ul
-              class="hidden h-full w-full items-center justify-around text-sm font-medium tracking-wider lg:flex"
+            <!-- menu -->
+            <div
+              id="navigation-menu"
+              class="absolute top-20 left-0 z-30 hidden w-full justify-center opacity-0 shadow-2xl transition duration-1000 lg:static lg:block lg:h-full lg:w-full lg:shadow-none"
             >
-              <li class=""><a href="" class="text-shadow-hero-sm">Home</a></li>
-              <li class=""><a href="" class="text-shadow-hero-sm">About</a></li>
-              <li class="">
-                <a href="" class="text-shadow-hero-sm">Dangle</a>
-              </li>
-              <li class="">
-                <a href="" class="text-shadow-hero-sm">Competition</a>
-              </li>
-              <li class="">
-                <a href="" class="text-shadow-hero-sm">Payment</a>
-              </li>
-            </ul>
+              <ul
+                class="flex h-64 w-10/12 flex-col items-center justify-evenly border-[.5px] border-neutral-300 bg-transparent text-sm font-medium tracking-wider backdrop-blur-xl lg:h-full lg:flex-row lg:items-center lg:justify-around lg:border-none lg:backdrop-blur-none"
+              >
+                <li class="">
+                  <a
+                    href=""
+                    class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
+                    >Home</a
+                  >
+                </li>
+                <li class="">
+                  <a
+                    href=""
+                    class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
+                    >About</a
+                  >
+                </li>
+                <li class="">
+                  <a
+                    href=""
+                    class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
+                    >Dangle</a
+                  >
+                </li>
+                <li class="">
+                  <a
+                    href=""
+                    class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
+                    >Competition</a
+                  >
+                </li>
+                <li class="">
+                  <a
+                    href=""
+                    class="text-shadow-hero-sm decoration-primary-100 decoration-2 underline-offset-4 hover:underline"
+                    >Payment</a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -168,6 +180,8 @@
               </a>
             </div>
           </div>
+
+          <!-- clock -->
           <div
             class="absolute -bottom-4 left-1/2 mx-auto h-20 w-full -translate-x-1/2 rounded-sm border-[0.5px] border-neutral-200 bg-neutral-900 px-5 opacity-75 sm:h-24 sm:w-[480px] md:w-[520px] lg:-bottom-5 lg:h-28 lg:w-[400px] lg:px-0"
           >
@@ -368,7 +382,7 @@
         </p>
       </div>
       <!-- swipper-js -->
-      <div class="swiper mt-8">
+      <div class="swiper mt-8 mb-32">
         <div class="swiper-wrapper pb-12">
           <!-- slide-1 -->
           <div
@@ -385,17 +399,17 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Podcast
                 </p>
               </div>
               <!-- text-content -->
               <div
-                class="z-10 mt-4 mb-8 px-5 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-32 lg:flex lg:w-full lg:justify-center"
+                class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Dengan Tema “How to improve yourself, with your creativity and
                   what you have” Merupakan Kompetisi yang membutuhkan pemikiran
@@ -407,7 +421,7 @@
               </div>
               <!-- action-button -->
               <div
-                class="z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm lg:absolute lg:bottom-0"
+                class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <a
                   href=""
@@ -438,17 +452,17 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Desain Web
                 </p>
               </div>
               <!-- text-content -->
               <div
-                class="z-10 mt-4 mb-8 px-5 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-32 lg:flex lg:w-full lg:justify-center"
+                class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan Kompetisi perancangan tampilan sebuah web statis
                   atau web yang informasi di dalamnya tidak dapat diubah kecuali
@@ -460,7 +474,7 @@
               </div>
               <!-- action-button -->
               <div
-                class="z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm lg:absolute lg:bottom-0"
+                class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <a
                   href=""
@@ -491,17 +505,17 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Fotografi
                 </p>
               </div>
               <!-- text-content -->
               <div
-                class="z-10 mt-4 mb-8 px-5 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-32 lg:flex lg:w-full lg:justify-center"
+                class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan kompetisi dalam menyajikan sebuah karya visual
                   berbentuk foto yang bermakna khusus dan informatif. Kompetisi
@@ -514,7 +528,7 @@
               </div>
               <!-- action-button -->
               <div
-                class="z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm lg:absolute lg:bottom-0"
+                class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <a
                   href=""
@@ -544,17 +558,17 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Essai
                 </p>
               </div>
               <!-- text-content -->
               <div
-                class="z-10 mt-4 mb-8 px-5 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-32 lg:flex lg:w-full lg:justify-center"
+                class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   Merupakan kompetisi di bidang kepenulisan yang dapat diikuti
                   oleh SMA sederajat dan mahasiswa yang berstatus aktif dari
@@ -566,7 +580,7 @@
               </div>
               <!-- action-button -->
               <div
-                class="z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm lg:absolute lg:bottom-0"
+                class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <a
                   href=""
@@ -597,17 +611,17 @@
                   class="h-full w-full object-cover"
                 />
                 <p
-                  class="absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
+                  class="text-shadow-hero-lg text-shadow-hero-lg absolute top-1/2 text-2xl font-medium tracking-wide md:text-3xl lg:top-16 lg:text-4xl"
                 >
                   Poster
                 </p>
               </div>
               <!-- text-content -->
               <div
-                class="z-10 mt-4 mb-8 px-5 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-32 lg:flex lg:w-full lg:justify-center"
+                class="z-10 mt-4 mb-8 px-5 pb-20 md:mb-10 md:mt-5 md:px-10 lg:absolute lg:top-36 lg:flex lg:w-full lg:justify-center"
               >
                 <p
-                  class="text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
+                  class="text-shadow-hero-md text-xs leading-relaxed text-neutral-50 md:leading-loose lg:w-[600px] lg:text-sm lg:leading-loose"
                 >
                   merupakan kompetisi yang menyediakan karya visual yang
                   berwarna-warni, yang memudahkan untuk menyuarakan masalah yang
@@ -618,7 +632,7 @@
               </div>
               <!-- action-button -->
               <div
-                class="z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm lg:absolute lg:bottom-0"
+                class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
                 <a
                   href=""
@@ -830,6 +844,30 @@
         </div>
       </div>
     </div>
+
+    <!-- to-top-floating-button -->
+    <button
+      type="button"
+      data-mdb-ripple="true"
+      data-mdb-ripple-color="light"
+      class="bottom-8 right-8 z-30 inline-block animate-bounce rounded-full bg-primary-400 p-4 text-xs font-medium uppercase leading-tight text-white shadow-md transition duration-300 ease-in-out hover:bg-primary-500 hover:shadow-lg focus:bg-primary-600 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-primary-800 active:shadow-lg"
+      id="btn-back-to-top"
+    >
+      <svg
+        aria-hidden="true"
+        focusable="false"
+        data-prefix="fas"
+        class="h-4 w-4"
+        role="img"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 448 512"
+      >
+        <path
+          fill="currentColor"
+          d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
+        ></path>
+      </svg>
+    </button>
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div
