--- a/src/index.html
+++ b/src/index.html
@@ -194,28 +194,28 @@
                 Dimulai dalam :
               </p>
               <span class="relative"
-                ><p class="md:text-3xl">00</p>
+                ><p class="md:text-3xl" id="countDownDay">00</p>
                 <p class="absolute text-xs text-primary-25 md:text-sm">
                   Hari
                 </p></span
               >
               <span class="">:</span>
               <span class="relative"
-                ><p class="md:text-3xl">00</p>
+                ><p class="md:text-3xl" id="countDownHour">00</p>
                 <p class="absolute text-xs text-primary-25 md:text-sm">
                   Jam
                 </p></span
               >
               <span class="">:</span>
               <span class="relative"
-                ><p class="md:text-3xl">00</p>
+                ><p class="md:text-3xl" id="countDownMinute">00</p>
                 <p class="absolute text-xs text-primary-25 md:text-sm">
                   Menit
                 </p></span
               >
               <span class="">:</span>
               <span class="relative"
-                ><p class="md:text-3xl">00</p>
+                ><p class="md:text-3xl" id="countDownSecond">00</p>
                 <p class="absolute text-xs text-primary-25 md:text-sm">
                   Detik
                 </p></span
@@ -423,10 +423,10 @@
               <div
                 class="absolute bottom-0 z-10 flex h-20 w-full items-center justify-center gap-10 bg-neutral-700 text-sm"
               >
-                <a
-                  href=""
+                <button
+				  onclick="daftarLomba('podcast')"
                   class="rounded-sm bg-neutral-0 px-8 py-2 font-semibold text-primary-900 md:px-10 md:py-3"
-                  >Daftar</a
+                  >Daftar</button
                 >
                 <a
                   href=""
@@ -871,7 +871,7 @@
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div
-      class="relative z-50 hidden"
+      class="relative z-50 opacity-100 transition duration-700"
       aria-labelledby="modal-title"
       role="dialog"
       aria-modal="true"
@@ -887,13 +887,15 @@
 		From: "opacity-100"
 		To: "opacity-0"
 	-->
-      <div
-        class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
-      ></div>
+      
 
       <div class="fixed inset-0 z-10 overflow-y-auto">
+		<div
+			class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity duration-1000 z-20"
+			id="backdrop"
+		></div>
         <div
-          class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0"
+          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 p-4 text-center sm:items-center sm:p-0 z-40"
         >
           <!--
 		  Modal panel, show/hide based on modal state.
@@ -908,10 +910,10 @@
           <div
             class="relative transform rounded-[3.5rem] border-4 bg-primary-400 text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-xl"
           >
-            <div class="relative z-0 h-48 w-full">
+            <div class="relative z-0 h-32 w-full">
               <img
                 src="/assets/img/mascot-main.png"
-                class="absolute top-[-10rem] left-32 z-0 w-2/3"
+                class="absolute top-[-10rem] left-1/2 -translate-x-1/2 z-0 w-2/3"
               />
             </div>
             <div class="relative z-50 rounded-[3.5rem] bg-primary-400">
@@ -928,16 +930,18 @@
                 </div>
               </div>
               <div class="pt-6 text-center text-xl">
-                <button
-                  href=""
-                  class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
+                <a
+                  id="btnRegistrasi"
+				  target="_blank"
+                  class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl block"
                 >
                   Registrasi
-                </button>
+                </a>
               </div>
               <div class="pt-6 pb-16 text-center text-xl">
                 <button
-                  href=""
+				  id="btnKonfirmasi"
+				  target="_blank"
                   class="w-96 rounded-xl bg-white py-6 px-8 font-semibold text-primary-400 shadow-xl"
                 >
                   Konfirmasi Pembayaran
