--- a/src/index.html
+++ b/src/index.html
@@ -871,7 +871,7 @@
 
     <!-- This example requires Tailwind CSS v2.0+ -->
     <div
-      class="relative z-50 opacity-100 transition duration-700"
+      class="relative z-50 opacity-0 hidden transition duration-700"
       aria-labelledby="modal-title"
       role="dialog"
       aria-modal="true"
